--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8"/>
+        <title>Microdata Tool</title>
         <link rel="stylesheet" href="site.css"/>
         <script src="modernizr-1.6.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
         <script src="jquery.microdata.js"></script>
-        <script>
-          $(function() {
-              $('<div class="arrow"/>').appendTo('body');
-          });
-        </script>
     </head>
     <body>
         <article>
@@ -50,5 +46,15 @@
                 </p>
             </div>
         </article>
+        <script type="text/javascript">
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-21183175-1']);
+		  _gaq.push(['_trackPageview']);
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
+		</script>
     </body>
 </html>
