Expanded on the Person microdata a bit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <article>
             <footer>
                 <p itemscope itemtype="http://data-vocabulary.org/Person">
-                    A little development and optimization tool brought to you by <a href="http://github.com/KrofDrakula"><span itemprop="name">Klemen Slavič</span></a>.
+                    A little development and optimization tool brought to you by
+                    <a href="http://github.com/KrofDrakula" itemprop="url"><span itemprop="name">Klemen Slavič</span>,
+                    aka <span itemprop="nickname">KrofDrakula</span></a>.
                 </p>
             </footer>
             <header>
