Fixed some content errors relating to the old layout

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 or even a <em>web server</em>.
             </p>
             <p>
-                See that arrow down in the left hand corner? Take a look.
+                See that little white box in the left hand corner? Take a look.
             </p>
             <p>
                 Want to start using it? <a href="https://github.com/KrofDrakula/microdata-tool" class="go">Go grab the code!</a>
@@ -43,7 +43,7 @@
             </p>
             <div class="instructions">
                 <p>
-                    Wanna try it out? Hover over each of the items on the list to highlight the
+                    Wanna try it out? Hover over each of the items in the white box to highlight the
                     relevant HTML elements in the document and click to see each object's properties.
                 </p>
             </div>
