Re-added the lib Javascript

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="site.css"/>
         <script src="modernizr-1.6.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-        <script src="lib/jquery.microdata.js"></script>
+        <script src="jquery.microdata.js"></script>
     </head>
     <body>
         <article>
