Externalized schema definitions

--- a/example.html
+++ b/example.html
@@ -5,6 +5,7 @@
         <title>HTML5 microdata test page</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
         <script src="jquery.microdata.js"></script>
+        <script src="schemas.js"></script>
     </head>
     <body>
         <h1>HTML5 microdata test page</h1>
