--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="http://code.jquery.com/qunit/git/qunit.js"></script>
         <script src="jquery.microdata.js"></script>
+        <script src="schemas.js"></script>
         <script src="test.js"></script>
     </head>
     <body style="padding-bottom:200px">
