--- a/index.html
+++ b/index.html
@@ -1,62 +1,73 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>Microdata Tool</title>
-        <link rel="stylesheet" href="site.css"/>
-        <script src="modernizr-1.6.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-        <script src="jquery.microdata.js"></script>
-    </head>
-    <body>
-        <article>
-            <header>
-                <h1>Microdata Tool</h1>
-                <p>A drop-in script for browsing and debugging <abbr>HTML5</abbr> microdata.</p>
-            </header>
+<head>
+    <meta charset="utf-8"/>
+    <title>Microdata Tool</title>
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Open+Sans:300,400" rel="stylesheet">
+    <link rel="stylesheet" href="site.css"/>
+    <script src="modernizr-1.6.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+    <script src="jquery.microdata.js"></script>
+</head>
+<body>
+    <article>
+        <header>
+            <h1>Microdata Tool</h1>
+            <p>A drop-in script for browsing and debugging <abbr>HTML5</abbr> microdata.</p>
+        </header>
+        <p>
+            So, you're implementing <a href="http://html5doctor.com/microdata/" target="_blank">HTML5 microdata</a> to
+            improve your site's findability, but find it annoying to use
+            <a href="http://www.google.com/webmasters/tools/richsnippets?url=//diveintohtml5.org/examples/review-plus-microdata.html" target="_blank">Google's Webmaster Tools</a>
+            to verify your results, having to republish your site for each and every change?
+        </p>
+        <p>
+            Been there. That's why I've built a little jQuery drop-in script that you can include
+            on your page and have a handy browser/validator handy, even <em>without Internet connectivity</em>
+            or even a <em>web server</em>.
+        </p>
+        <p>
+            See that little white box in the left hand corner? Take a look.
+        </p>
+        <div class="get-it">
+            <h2>
+                Want to start using it?
+            </h2>
+            <a href="https://github.com/KrofDrakula/microdata-tool" target="_blank" class="button">Go grab the code!</a>            
+        </div>
+        <div class="instructions">
+            <h2>Want to try it out? </h2>
             <p>
-                So, you're implementing <a href="http://html5doctor.com/microdata/">HTML5 microdata</a> to
-                improve your site's findability, but find it annoying to use
-                <a href="http://www.google.com/webmasters/tools/richsnippets?url=//diveintohtml5.org/examples/review-plus-microdata.html">Google's Webmaster Tools</a>
-                to verify your results, having to republish your site for each and every change?
+                Hover over each of the items in the white box to highlight the
+                relevant HTML elements in the document.
             </p>
-            <p>
-                Been there. That's why I've built a little jQuery drop-in script that you can include
-                on your page and have a handy browser/validator handy, even <em>without Internet connectivity</em>
-                or even a <em>web server</em>.
+            <p>Click to see each object's properties.</p>
+        </div>
+        <footer>
+            <p class="microdata" itemscope itemtype="http://data-vocabulary.org/Person">
+                A little development and optimization tool brought to you by
+                <a href="http://github.com/KrofDrakula" target="_blank" itemprop="url">
+                    <span itemprop="name">Klemen Slavič</span>,
+                    aka <span itemprop="nickname">KrofDrakula</span>
+                </a>
             </p>
-            <p>
-                See that little white box in the left hand corner? Take a look.
+            <p class="microdata" itemscope itemtype="http://data-vocabulary.org/colleague">
+                Designed by 
+                <a href="http://github.com/ajaykarwal" target="_blank" itemprop="url">
+                    <span itemprop="name">Ajay Karwal</span>
+                </a>
             </p>
-            <p>
-                Want to start using it? <a href="https://github.com/KrofDrakula/microdata-tool" class="go">Go grab the code!</a>
-            </p>
-            <p>
-                <em>Yes, I know this page is fugly. <a href="https://github.com/KrofDrakula/microdata-tool/tree/gh-pages">Care to contribute</a>?</em>
-            </p>
-            <div class="instructions">
-                <p>
-                    Wanna try it out? Hover over each of the items in the white box to highlight the
-                    relevant HTML elements in the document and click to see each object's properties.
-                </p>
-            </div>
-            <footer>
-                <p itemscope itemtype="http://data-vocabulary.org/Person">
-                    A little development and optimization tool brought to you by
-                    <a href="http://github.com/KrofDrakula" itemprop="url"><span itemprop="name">Klemen Slavič</span>,
-                    aka <span itemprop="nickname">KrofDrakula</span></a>.
-                </p>
-            </footer>
-        </article>
-        <script type="text/javascript">
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-21183175-1']);
-		  _gaq.push(['_trackPageview']);
-		  (function() {
-		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
-		</script>
-    </body>
+        </footer>
+    </article>
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-21183175-1']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+  </script>
+</body>
 </html>
